# MWMP-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  runUnitTests.sh
src/: FastMarching.cpp  FastMarching.hpp  MWMP.cpp  MWMP.hpp  MatrixOperations.cpp  MatrixOperations.hpp  SOMP.cpp  SOMP.hpp  StateSpaceModels.cpp  StateSpaceModels.hpp
test/unit/: MWMPTests.cpp  MatrixOperationsTests.cpp  SOMPTests.cpp  StateSpaceModelsTests.cpp
test/unit/inputs/: dummy_obstacles_map.txt  goal_ee_pose.txt  goal_pose.txt  ini_arm_positions.txt  ini_rover_pose.txt  matrix_inverse.txt  u.txt  x.txt
test/unit/results/: A.txt  B.txt  C.txt  D.txt  G.txt  K.txt  Q.txt  R.txt  h.txt  matrix_inverse.txt  matrix_vector_dot.txt  matrixes_dot.txt  obs_cost.txt  r.txt  xf.txt
utils/FileManager/: FileManager.cpp  FileManager.hpp
utils/MatlabPlots/: plotMM.m  plotMM.sh
